--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "metro-config": "^0.77.0"
   },
   "private": true
 }
